# TuRBO_REI

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
TuRBO/: __init__.py  define_problems.py  rei.py  turbo_rei.py
TuRBO/benchmark/: __init__.py
TuRBO/benchmark/ebo/: LICENSE  __init__.py
TuRBO/benchmark/mopta08/: README.md  __init__.py
TuRBO/benchmark/rom/: __init__.py  rom.py
data/: Abaqus_n28_Interface_Mid_training.csv  Abaqus_n28_Interface_Mid_validation.csv  Training2.csv  Validation2.csv
notebooks/: turbo_rei.ipynb
notebooks/results/ROM_6D/TuRBO-1-EI-qREI-1/: solutions1.csv
notebooks/results/ROM_6D/TuRBO-5-EI-qREI-1/: solutions1.csv  times1.csv
notebooks/s11/results/ROM_6D/TuRBO-1-EI-1/: solutions1.csv  times1.csv
notebooks/s11/results/ROM_6D/TuRBO-5-EI-1/: solutions1.csv  times1.csv
notebooks/s11/results/ROM_6D/TuRBO-5-EI-qREI-1/: solutions1.csv  times1.csv
notebooks/s22/results/ROM_6D/TuRBO-1-EI-qREI-1/: solutions1.csv  times1.csv
notebooks/s22/results/ROM_6D/TuRBO-3-EI-qREI-1/: solutions1.csv  times1.csv
notebooks/s22/results/ROM_6D/TuRBO-5-EI-1/: solutions1.csv  times1.csv
notebooks/s22/results/ROM_6D/TuRBO-5-EI-qREI-1/: solutions1.csv  times1.csv
notebooks/temp_model/results/ROM_6D/TuRBO-1-EI-qREI-1/: times1.csv
notebooks/temp_model/results_new_data/ROM_6D/TuRBO-1-EI-1/: solutions1.csv  times1.csv
src/: define_problems.py  turbo_rei.py
src/benchmark/ebo/: rover_function.py
src/benchmark/hpa/: README.md
src/benchmark/mopta08/: LICENSE  mopta08.py
(+9 files in other folders)
